# ResponsiveNewsReader

./: .replit  README.md  api.py  app.py  news_scraper.py  pyproject.toml  sentiment_analyzer.py  tts_generator.py  tts_service.py  utils.py
attached_assets/: Pasted-Assignment-News-Summarization-and-Text-to-Speech-Application-Objective-Develop-a-web-based-appli-1742702079265.txt
