[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.11",
    "googletrans==4.0.0rc1",
    "gtts>=2.5.4",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.0",
]
